src/main/java/com/theprophet31337/prophecy/parser/antlr4/ProphecyParser.java
// Generated from Prophecy.g4 by ANTLR 4.2.2
package com.theprophet31337.prophecy.parser.antlr4;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProphecyParser extends Parser
{
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			T__31 = 1, T__30 = 2, T__29 = 3, T__28 = 4, T__27 = 5, T__26 = 6, T__25 = 7, T__24 = 8,
			T__23 = 9, T__22 = 10, T__21 = 11, T__20 = 12, T__19 = 13, T__18 = 14, T__17 = 15, T__16 = 16,
			T__15 = 17, T__14 = 18, T__13 = 19, T__12 = 20, T__11 = 21, T__10 = 22, T__9 = 23, T__8 = 24,
			T__7 = 25, T__6 = 26, T__5 = 27, T__4 = 28, T__3 = 29, T__2 = 30, T__1 = 31, T__0 = 32,
			CLASS = 33, EXTENDS = 34, THIS = 35, STATIC = 36, IF = 37, WHILE = 38, ELSE = 39, RETURN = 40,
			TRUE = 41, FALSE = 42, FLOAT = 43, INT = 44, CHAR = 45, BOOL = 46, VOID = 47, ID = 48,
			STRINGLIT = 49, INTLIT = 50, FLOATLIT = 51, CHARLIT = 52, WS = 53, SL_COMMENT = 54,
			ML_COMMENT = 55;
	public static final String[] tokenNames = {
			"<INVALID>", "']'", "'&'", "','", "'*'", "'-'", "'['", "'('", "'<'", "'--'",
			"'!='", "'<='", "'<<'", "'{'", "'}'", "'++'", "'>>'", "'[]'", "'^'", "')'",
			"'.'", "'+'", "'='", "';'", "'&&'", "'||'", "'>'", "'/'", "'=='", "'~'",
			"'>='", "'|'", "'!'", "'class'", "'extends'", "'this'", "'static'", "'if'",
			"'while'", "'else'", "'return'", "'true'", "'false'", "'float'", "'int'",
			"'char'", "'bool'", "'void'", "ID", "STRINGLIT", "INTLIT", "FLOATLIT",
			"CHARLIT", "WS", "SL_COMMENT", "ML_COMMENT"
	};
	public static final int
			RULE_file = 0, RULE_classdef = 1, RULE_defblock = 2, RULE_defstat = 3,
			RULE_modifier = 4, RULE_fielddef = 5, RULE_methoddef = 6, RULE_paramlist = 7,
			RULE_param = 8, RULE_block = 9, RULE_stmt = 10, RULE_lhs = 11, RULE_vardecl = 12,
			RULE_exprlist = 13, RULE_expr = 14, RULE_selexpr = 15, RULE_call = 16,
			RULE_primary = 17, RULE_type = 18, RULE_primitiveType = 19;
	public static final String[] ruleNames = {
			"file", "classdef", "defblock", "defstat", "modifier", "fielddef", "methoddef",
			"paramlist", "param", "block", "stmt", "lhs", "vardecl", "exprlist", "expr",
			"selexpr", "call", "primary", "type", "primitiveType"
	};

	@Override
	public String getGrammarFileName()
	{
		return "Prophecy.g4";
	}

	@Override
	public String[] getTokenNames()
	{
		return tokenNames;
	}

	@Override
	public String[] getRuleNames()
	{
		return ruleNames;
	}

	@Override
	public String getSerializedATN()
	{
		return _serializedATN;
	}

	@Override
	public ATN getATN()
	{
		return _ATN;
	}

	public ProphecyParser(TokenStream input)
	{
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext
	{
		public TerminalNode EOF()
		{
			return getToken(ProphecyParser.EOF, 0);
		}

		public ClassdefContext classdef()
		{
			return getRuleContext(ClassdefContext.class, 0);
		}

		public FileContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_file;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterFile(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitFile(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException
	{
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(40);
				classdef();
				setState(41);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdefContext extends ParserRuleContext
	{
		public Token name;
		public Token superClassName;

		public DefblockContext defblock()
		{
			return getRuleContext(DefblockContext.class, 0);
		}

		public List<TerminalNode> ID()
		{
			return getTokens(ProphecyParser.ID);
		}

		public TerminalNode EXTENDS()
		{
			return getToken(ProphecyParser.EXTENDS, 0);
		}

		public TerminalNode ID(int i)
		{
			return getToken(ProphecyParser.ID, i);
		}

		public TerminalNode CLASS()
		{
			return getToken(ProphecyParser.CLASS, 0);
		}

		public ClassdefContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_classdef;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterClassdef(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitClassdef(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitClassdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassdefContext classdef() throws RecognitionException
	{
		ClassdefContext _localctx = new ClassdefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(43);
				match(CLASS);
				setState(44);
				((ClassdefContext) _localctx).name = match(ID);
				setState(47);
				_la = _input.LA(1);
				if (_la == EXTENDS) {
					{
						setState(45);
						match(EXTENDS);
						setState(46);
						((ClassdefContext) _localctx).superClassName = match(ID);
					}
				}

				setState(49);
				defblock();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefblockContext extends ParserRuleContext
	{
		public List<DefstatContext> defstat()
		{
			return getRuleContexts(DefstatContext.class);
		}

		public DefstatContext defstat(int i)
		{
			return getRuleContext(DefstatContext.class, i);
		}

		public DefblockContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_defblock;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterDefblock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitDefblock(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitDefblock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefblockContext defblock() throws RecognitionException
	{
		DefblockContext _localctx = new DefblockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defblock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(51);
				match(13);
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(52);
							defstat();
						}
					}
					setState(55);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STATIC) | (1L << FLOAT) | (1L << INT) | (1L << CHAR) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0));
				setState(57);
				match(14);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefstatContext extends ParserRuleContext
	{
		public MethoddefContext methoddef()
		{
			return getRuleContext(MethoddefContext.class, 0);
		}

		public ModifierContext modifier()
		{
			return getRuleContext(ModifierContext.class, 0);
		}

		public FielddefContext fielddef()
		{
			return getRuleContext(FielddefContext.class, 0);
		}

		public DefstatContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_defstat;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterDefstat(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitDefstat(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitDefstat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefstatContext defstat() throws RecognitionException
	{
		DefstatContext _localctx = new DefstatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defstat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(60);
				_la = _input.LA(1);
				if (_la == STATIC) {
					{
						setState(59);
						modifier();
					}
				}

				setState(64);
				switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
					case 1: {
						setState(62);
						fielddef();
					}
					break;

					case 2: {
						setState(63);
						methoddef();
					}
					break;
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModifierContext extends ParserRuleContext
	{
		public Token static_;

		public TerminalNode STATIC()
		{
			return getToken(ProphecyParser.STATIC, 0);
		}

		public ModifierContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_modifier;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterModifier(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitModifier(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModifierContext modifier() throws RecognitionException
	{
		ModifierContext _localctx = new ModifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(66);
				((ModifierContext) _localctx).static_ = match(STATIC);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FielddefContext extends ParserRuleContext
	{
		public Token name;

		public TerminalNode ID()
		{
			return getToken(ProphecyParser.ID, 0);
		}

		public TypeContext type()
		{
			return getRuleContext(TypeContext.class, 0);
		}

		public FielddefContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_fielddef;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterFielddef(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitFielddef(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitFielddef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FielddefContext fielddef() throws RecognitionException
	{
		FielddefContext _localctx = new FielddefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fielddef);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(68);
				type();
				setState(69);
				((FielddefContext) _localctx).name = match(ID);
				setState(70);
				match(23);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethoddefContext extends ParserRuleContext
	{
		public Token name;

		public ParamlistContext paramlist()
		{
			return getRuleContext(ParamlistContext.class, 0);
		}

		public TerminalNode ID()
		{
			return getToken(ProphecyParser.ID, 0);
		}

		public TypeContext type()
		{
			return getRuleContext(TypeContext.class, 0);
		}

		public BlockContext block()
		{
			return getRuleContext(BlockContext.class, 0);
		}

		public MethoddefContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_methoddef;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterMethoddef(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitMethoddef(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor)
				return ((ProphecyVisitor<? extends T>) visitor).visitMethoddef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethoddefContext methoddef() throws RecognitionException
	{
		MethoddefContext _localctx = new MethoddefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methoddef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(73);
				switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
					case 1: {
						setState(72);
						type();
					}
					break;
				}
				setState(75);
				((MethoddefContext) _localctx).name = match(ID);
				setState(76);
				match(7);
				setState(78);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FLOAT) | (1L << INT) | (1L << CHAR) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0)) {
					{
						setState(77);
						paramlist();
					}
				}

				setState(80);
				match(19);
				setState(81);
				block();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext
	{
		public List<ParamContext> param()
		{
			return getRuleContexts(ParamContext.class);
		}

		public ParamContext param(int i)
		{
			return getRuleContext(ParamContext.class, i);
		}

		public ParamlistContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_paramlist;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterParamlist(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitParamlist(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor)
				return ((ProphecyVisitor<? extends T>) visitor).visitParamlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamlistContext paramlist() throws RecognitionException
	{
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(83);
				param();
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == 3) {
					{
						{
							setState(84);
							match(3);
							setState(85);
							param();
						}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext
	{
		public Token name;

		public TerminalNode ID()
		{
			return getToken(ProphecyParser.ID, 0);
		}

		public TypeContext type()
		{
			return getRuleContext(TypeContext.class, 0);
		}

		public ParamContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_param;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterParam(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitParam(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException
	{
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(91);
				type();
				setState(92);
				((ParamContext) _localctx).name = match(ID);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext
	{
		public StmtContext stmt(int i)
		{
			return getRuleContext(StmtContext.class, i);
		}

		public List<StmtContext> stmt()
		{
			return getRuleContexts(StmtContext.class);
		}

		public BlockContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_block;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitBlock(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException
	{
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(94);
				match(13);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << 13) | (1L << THIS) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << TRUE) | (1L << FALSE) | (1L << FLOAT) | (1L << INT) | (1L << CHAR) | (1L << BOOL) | (1L << VOID) | (1L << ID) | (1L << STRINGLIT) | (1L << INTLIT) | (1L << FLOATLIT) | (1L << CHARLIT))) != 0)) {
					{
						{
							setState(95);
							stmt();
						}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
				match(14);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext
	{
		public StmtContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_stmt;
		}

		public StmtContext()
		{
		}

		public void copyFrom(StmtContext ctx)
		{
			super.copyFrom(ctx);
		}
	}

	public static class WhileStmtContext extends StmtContext
	{
		public TerminalNode WHILE()
		{
			return getToken(ProphecyParser.WHILE, 0);
		}

		public ExprContext expr()
		{
			return getRuleContext(ExprContext.class, 0);
		}

		public StmtContext stmt()
		{
			return getRuleContext(StmtContext.class, 0);
		}

		public WhileStmtContext(StmtContext ctx)
		{
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterWhileStmt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitWhileStmt(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor)
				return ((ProphecyVisitor<? extends T>) visitor).visitWhileStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class VarDeclStmtContext extends StmtContext
	{
		public VardeclContext vardecl()
		{
			return getRuleContext(VardeclContext.class, 0);
		}

		public VarDeclStmtContext(StmtContext ctx)
		{
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterVarDeclStmt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitVarDeclStmt(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor)
				return ((ProphecyVisitor<? extends T>) visitor).visitVarDeclStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class CallStmtContext extends StmtContext
	{
		public CallContext call()
		{
			return getRuleContext(CallContext.class, 0);
		}

		public CallStmtContext(StmtContext ctx)
		{
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterCallStmt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitCallStmt(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor) return ((ProphecyVisitor<? extends T>) visitor).visitCallStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class AssignmentStmtContext extends StmtContext
	{
		public ExprContext rhs;

		public ExprContext expr()
		{
			return getRuleContext(ExprContext.class, 0);
		}

		public LhsContext lhs()
		{
			return getRuleContext(LhsContext.class, 0);
		}

		public AssignmentStmtContext(StmtContext ctx)
		{
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterAssignmentStmt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitAssignmentStmt(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor)
				return ((ProphecyVisitor<? extends T>) visitor).visitAssignmentStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class BlockStmtContext extends StmtContext
	{
		public BlockContext block()
		{
			return getRuleContext(BlockContext.class, 0);
		}

		public BlockStmtContext(StmtContext ctx)
		{
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterBlockStmt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitBlockStmt(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor)
				return ((ProphecyVisitor<? extends T>) visitor).visitBlockStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class ReturnStmtContext extends StmtContext
	{
		public ExprContext value;

		public ExprContext expr()
		{
			return getRuleContext(ExprContext.class, 0);
		}

		public TerminalNode RETURN()
		{
			return getToken(ProphecyParser.RETURN, 0);
		}

		public ReturnStmtContext(StmtContext ctx)
		{
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterReturnStmt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitReturnStmt(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof ProphecyVisitor)
				return ((ProphecyVisitor<? extends T>) visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class IfStmtContext extends StmtContext
	{
		public ExprContext cond;

		public TerminalNode IF()
		{
			return getToken(ProphecyParser.IF, 0);
		}

		public StmtContext stmt(int i)
		{
			return getRuleContext(StmtContext.class, i);
		}

		public TerminalNode ELSE()
		{
			return getToken(ProphecyParser.ELSE, 0);
		}

		public ExprContext expr()
		{
			return getRuleContext(ExprContext.class, 0);
		}

		public List<StmtContext> stmt()
		{
			return getRuleContexts(StmtContext.class);
		}

		public IfStmtContext(StmtContext ctx)
		{
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).enterIfStmt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ProphecyListener) ((ProphecyListener) listener).exitIfStmt(this);
		}
